# Indy-ROS

./: .gitignore  README.md
src/indy_description/: CMakeLists.txt  package.xml
src/indy_description/launch/: indy_description.launch
src/indy_description/meshes/icon3/visual/: ICoN3_6.stl
src/indy_description/urdf/: generate_all_urdfs.sh  indy.urdf.xacro  indy_common.xacro  indy_macro.xacro  indy_transmissions.xacro  materials.xacro
src/indy_description/urdf/config/dual_icon3/: joint_limits.yaml  kinematics.yaml  physical_parameters.yaml  visual_parameters.yaml
src/indy_description/urdf/config/icon3/: joint_limits.yaml  kinematics.yaml
src/indy_description/urdf/config/icon7l/: joint_limits.yaml  kinematics.yaml
src/indy_description/urdf/config/indy7_v2/: kinematics.yaml
src/indy_description/urdf/config/indyrp2_v2/: kinematics.yaml
src/indy_description/urdf/config/nuri20c/: kinematics.yaml  physical_parameters.yaml  visual_parameters.yaml
src/indy_description/urdf/config/nuri3s/: kinematics.yaml  physical_parameters.yaml  visual_parameters.yaml
src/indy_description/urdf/config/nuri4s/: kinematics.yaml  physical_parameters.yaml  visual_parameters.yaml
src/indy_description/urdf/config/nuri7c/: kinematics.yaml
src/indy_description/urdf/config/opti5/: kinematics.yaml  physical_parameters.yaml  visual_parameters.yaml
src/indy_description/urdf_files/: dual_icon3.urdf  icon3.urdf  icon7l.urdf  indy12.urdf  indy12_v2.urdf  indy7.urdf  indy7_eye.urdf  indy7_v2.urdf  indyrp2.urdf  indyrp2_eye.urdf  indyrp2_v2.urdf  nuri20c.urdf  nuri3s.urdf  nuri4s.urdf  nuri7c.urdf  opti5.urdf
src/indy_driver/: CMakeLists.txt  package.xml
src/indy_driver/launch/: indy_bringup.launch  indy_servo_keyboard.launch
src/indy_driver/src/: indy_driver_dcp.py  servo_keyboard_input.py
src/indy_gazebo/: CMakeLists.txt  package.xml
src/indy_gazebo/controller/: indy_controller_6dof.yaml  indy_controller_7dof.yaml
src/indy_gazebo/launch/: indy_gazebo.launch
src/indy_moveit/: CMakeLists.txt  package.xml
src/indy_moveit/config/: controllers_6dof.yaml  controllers_6dof_gazebo.yaml  controllers_7dof.yaml  controllers_7dof_gazebo.yaml  indy.srdf.xacro  indy_config.yaml  indy_macro.srdf.xacro  joint_limits_6dof.yaml  joint_limits_7dof.yaml  ompl_planning.yaml
src/indy_moveit/launch/: default_warehouse_db.launch  indy_moveit_controller_manager.launch.xml  indy_moveit_sensor_manager.launch.xml  move_group.launch  moveit_gazebo.launch  moveit_indy.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  sensor_manager.launch.xml  spacenav.launch  trajectory_execution.launch.xml  warehouse.launch
src/indy_moveit/rviz_config/: moveit.rviz
