<?xml version="1.0"?>
<package format="2">
  <name>indy_description</name>
  <version>1.0.0</version>
  <description>The indy_description package</description>
  <maintainer email="nguyen.pham@neuromeka.com">Nguyen Pham</maintainer>
  
  <license>BSD</license>
  
  <url type="website">http://wiki.neuromeka.net/index.php?title=ROS_Indy</url>
  <url type="repository">https://github.com/neuromeka-robotics/ros_indy</url>
  <url type="bugtracker">https://github.com/neuromeka-robotics/ros_indyissues</url>

  <buildtool_depend>catkin</buildtool_depend>
</package>
